--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link href="https://cdn.prod.website-files.com/624eb5c51026869311f0668a/62fcefe1308e3b32ab18d089_fav.png" rel="shortcut icon" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>subscription-manager</title>
+    <title>Subscription-manager</title>
   </head>
   <body>
     <div id="root"></div>
