Subscription interface defined and Header component created and styled

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link href="https://cdn.prod.website-files.com/624eb5c51026869311f0668a/62fcefe1308e3b32ab18d089_fav.png" rel="shortcut icon" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css2?family=Hind:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Subscription-manager</title>
   </head>
